--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,10 +16,10 @@
             android:theme="@style/Theme.BoxOffice"
             tools:targetApi="31">
         <activity
-                android:name=".MovieDetailsActivity"
+                android:name=".MemoActivity"
                 android:exported="false"/>
         <activity
-                android:name=".reviewmake"
+                android:name=".MovieDetailsActivity"
                 android:exported="false"/>
         <activity
                 android:name=".JoinActivity"
